<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="#FFFFFF"
              android:orientation="vertical"
              android:paddingTop="5dp"
              android:scrollbars="vertical"
              android:overScrollMode="always">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/HP"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:background="#FFFFFF"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/hp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/back"/>

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/DP"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/profile"
                app:civ_border_color="#ffffff"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textColor="#050000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/DP" />

        <ImageButton
                android:id="@+id/chat"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Name"
                app:srcCompat="@drawable/chat"
                android:contentDescription="@string/todo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/bio"
            android:textAlignment="center" />

    <Button
            android:id="@+id/addBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_bio"
            android:textAllCaps="false"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill|top"
            android:orientation="horizontal"
            android:padding="10dp" android:baselineAligned="false">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <at.markushi.ui.CircleButton
                    android:id="@+id/addB"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/add"
                    app:cb_color="#23696969" />

            <TextView
                    android:id="@+id/addT"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text="@string/add_to_story" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <at.markushi.ui.CircleButton
                    android:id="@+id/view"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/view"
                    app:cb_color="#23696969" />

            <TextView
                    android:id="@+id/ViewT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text="@string/view_as"

            />

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <at.markushi.ui.CircleButton
                    android:id="@+id/edit"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/edit"
                    app:cb_color="#23696969" />

            <TextView
                    android:id="@+id/editT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text="@string/edit_profile" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <at.markushi.ui.CircleButton
                    android:id="@+id/more"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/more"
                    app:cb_color="#23696969" />

            <TextView
                    android:id="@+id/moreT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text="@string/more"
                    app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
